--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "cache-manager": "^5.1.7",
     "node-html-parser": "^6.1.5",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "webpack": "^5.76.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.2.0",
