--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.3.4",
     "cache-manager": "^5.1.7",
+    "nest": "^0.1.6",
     "node-html-parser": "^6.1.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
