--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^4.11.0",
     "axios": "^1.3.4",
     "cache-manager": "^5.1.7",
     "nest": "^0.1.6",
     "node-html-parser": "^6.1.5",
+    "prisma": "^4.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "webpack": "^5.76.1"
