--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/mkgtru-api/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/mkgtru-api/test/jest-e2e.json",
+    "documentation":"npx @compodoc/compodoc -p tsconfig.json -s"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -27,6 +28,7 @@
     "@prisma/client": "^4.11.0",
     "axios": "^1.3.4",
     "cache-manager": "^5.1.7",
+    "cuid": "^3.0.0",
     "nest": "^0.1.6",
     "node-html-parser": "^6.1.5",
     "prisma": "^4.11.0",
@@ -35,6 +37,7 @@
     "webpack": "^5.76.1"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.19",
     "@nestjs/cli": "^9.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
