--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mkgtru-api",
   "version": "0.0.1",
-  "description": "",
+  "description": "Path: https://mkgtru-api.onrender.com",
   "author": "https://github.com/AlexC-ux",
   "private": true,
   "license": "UNLICENSED",
