--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Path: https://mkgtru-api.onrender.com",
   "author": "https://github.com/AlexC-ux",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "",
   "scripts": {
     "build": "npx nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
@@ -35,6 +35,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "telegraf": "^4.12.2",
+    "timers-promises": "^1.0.1",
     "webpack": "^5.76.1"
   },
   "devDependencies": {
