--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "cuid": "^3.0.0",
     "nest": "^0.1.6",
     "node-html-parser": "^6.1.5",
+    "node-schedule": "^2.1.1",
     "prisma": "^4.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "telegraf": "^4.12.2",
-    "timers": "^0.1.1",
     "webpack": "^5.76.1"
   },
   "devDependencies": {
