--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "start:dev": "npx nest start --watch",
     "start:debug": "npx nest start --debug --watch",
     "start:prod": "node dist/apps/mkgtru-api/main",
+    "start:doc": "npx @compodoc/compodoc -p tsconfig.json --hideGenerator && npm run start:dev documentation",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/mkgtru-api/test/jest-e2e.json",
-    "documentation": "npx @compodoc/compodoc -s -p tsconfig.json --hideGenerator --port 1000"
+    "test:e2e": "jest --config ./apps/mkgtru-api/test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
