--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "license": "PRIVATE",
   "scripts": {
     "build": "npx nest build",
+    "build:doc": "npx @compodoc/compodoc -p tsconfig.json --hideGenerator",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "npx nest start",
     "start:dev": "npx nest start --watch",
     "start:debug": "npx nest start --debug --watch",
     "start:prod": "node dist/apps/mkgtru-api/main",
-    "start:doc": "npx @compodoc/compodoc -p tsconfig.json --hideGenerator && npm run start:dev documentation",
+    "start:doc": "npm run build:doc && npm run start:dev documentation",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
