--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "axios": "^1.3.4",
     "cache-manager": "^5.1.7",
     "cuid": "^3.0.0",
+    "http-proxy-middleware": "^2.0.6",
     "nest": "^0.1.6",
     "node-html-parser": "^6.1.5",
     "node-schedule": "^2.1.1",
     "prisma": "^4.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "serve": "^14.2.0",
     "swagger-ui-express": "^4.6.2",
     "telegraf": "^4.12.2",
     "webpack": "^5.76.1"
