--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:dev": "npx nest start --watch",
     "start:debug": "npx nest start --debug --watch",
     "start:prod": "node dist/apps/mkgtru-api/main",
+    "start:corsproxy": "node apps/cors-proxy/index.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
