--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "cache-manager": "^5.1.7",
     "cuid": "^3.0.0",
     "http-proxy-middleware": "^2.0.6",
-    "https-proxy-agent": "^5.0.1",
     "nest": "^0.1.6",
     "node-html-parser": "^6.1.5",
     "node-schedule": "^2.1.1",
@@ -43,6 +42,7 @@
     "serve": "^14.2.0",
     "swagger-ui-express": "^4.6.2",
     "telegraf": "^4.12.2",
+    "tunnel": "^0.0.6",
     "webpack": "^5.76.1"
   },
   "devDependencies": {
