--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@prisma/client": "^4.11.0",
     "axios": "^1.3.4",
     "cache-manager": "^5.1.7",
+    "crypto": "^1.0.1",
     "cuid": "^3.0.0",
     "http-proxy-middleware": "^2.0.6",
     "nest": "^0.1.6",
