--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.11.0",
     "axios": "^1.3.4",
+    "axios-socks5-agent": "^1.0.5",
     "cache-manager": "^5.1.7",
     "crypto": "^1.0.1",
     "cuid": "^3.0.0",
