--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./apps/mkgtru-api/test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -28,10 +29,10 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^6.2.1",
-    "@prisma/client": "^4.11.0",
-    "axios": "^1.3.4",
+    "@prisma/client": "^4.16.2",
+    "axios": "^1.6.0",
     "axios-socks5-agent": "^1.0.5",
-    "cache-manager": "^5.1.7",
+    "cache-manager": "^5.2.4",
     "crypto": "^1.0.1",
     "cuid": "^3.0.0",
     "http-proxy-middleware": "^2.0.6",
